--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -263,6 +263,7 @@ article.content a {
 @import "layouts/essays";
 @import "layouts/essay-single";
 @import "layouts/bookshelf";
+@import "layouts/links";
 
 
 ///////////////////////mobile
