--- a/assets/sass/layouts/links.scss
+++ b/assets/sass/layouts/links.scss
@@ -20,13 +20,14 @@
 
 .links-header {
   text-align: center;
-  margin-bottom: 2rem;
-  padding-bottom: 1rem;
+  margin-bottom: 1.2rem;
+  margin-top: -0.7rem;
+  padding-bottom: 0.5rem;
   border-bottom: 2px solid rgba(177, 98, 134, 0.15);
   
   h1 {
     font-family: "Lora", serif;
-    font-size: 1.75rem;
+    font-size: 1.5rem;
     font-weight: 600;
     color: #2c2c2c;
     margin-bottom: 0;
@@ -44,14 +45,16 @@
 
 .links .pub-section {
   font-family: "Lora", serif;
-  font-size: 1.05rem;
-  line-height: 1.8;
+  font-size: 1rem;
+  line-height: 1.6;
   color: #333;
   
   /* Paragraphs */
   p {
-    margin: 0.36rem 0;
+    margin: 0.7rem 0;
     color: #444;
+    font-size: 0.95rem;
+
   }
   
   /* Headings */
@@ -63,29 +66,29 @@
   }
   
   h1 {
-    font-size: 2rem;
+    font-size: 1.55rem;
     padding-bottom: 0.15rem !important;
     border-bottom: 2px solid rgba(177, 98, 134, 0.2);
   }
   
   h2 {
-    font-size: 1.55rem;
+    font-size: 1.5rem;
     padding-bottom: 0.1rem;
     border-bottom: 2px solid rgba(177, 98, 134, 0.2);
   }
   
   h3 {
-    font-size: 1.5rem;
+    font-size: 1.3rem;
     color: #8c4d67;
   }
   
   h4 {
-    font-size: 1.25rem;
+    font-size: 1.15rem;
   }
   
   /* Blockquotes */
   blockquote {
-    font-size: 1.1rem;
+    font-size: 1.05rem;
     line-height: 1.8;
     color: #555;
     margin: 2rem 0;
@@ -114,7 +117,7 @@
     padding: 0.2rem 0.4rem;
     border-radius: 4px;
     font-family: "Courier New", monospace;
-    font-size: 0.9em;
+    font-size: 0.8em;
   }
   
   pre {
@@ -127,7 +130,7 @@
     
     code {
       font-family: "Courier New", monospace;
-      font-size: 0.9rem;
+      font-size: 0.8rem;
       line-height: 1.6;
     }
   }
