--- a/assets/sass/layouts/links.scss
+++ b/assets/sass/layouts/links.scss
@@ -53,7 +53,7 @@
   p {
     margin: 0.7rem 0;
     color: #444;
-    font-size: 0.95rem;
+    font-size: 1rem;
 
   }
   
@@ -105,8 +105,10 @@
     padding-left: 2rem;
     
     li {
-      margin: 0.8rem 0;
+      margin: 0.05rem 0;
       line-height: 1.7;
+      font-size: 0.95em;
+
     }
   }
   
