--- a/layouts/bookshelf/list.html
+++ b/layouts/bookshelf/list.html
@@ -3,7 +3,7 @@
   <div class="bookshelf-page">
 
     <header class="bookshelf-hero">
-     A catalogue of selected books I've read, loosely grouped by theme. I put this together mainly as a way to keep a record of the books that left some mark on me. It is not a complete list, but rather what I could recall and chose to share publicly.
+     A catalogue of selected books I've read, loosely grouped by theme, and ordered alphabetically by author names. I put this together mainly as a way to keep a record of the books that left some mark on me. It is not a complete list, but rather what I could recall and chose to share publicly.
  <p>
  </p>       
     </header>
