--- a/layouts/bookshelf/list.html
+++ b/layouts/bookshelf/list.html
@@ -2,11 +2,11 @@
 <main id="main" class="bookshelf">
   <div class="bookshelf-page">
 
-    <header class="bookshelf-hero">
-     A catalogue of selected books I've read, loosely grouped by theme, and ordered alphabetically by author names. I put this together mainly as a way to keep a record of the books that left some mark on me. It is not a complete list, but rather what I could recall and chose to share publicly.
- <p>
- </p>       
-    </header>
+<header class="bookshelf-hero">
+  <p class="bookshelf-intro">
+    A catalogue of selected books I've read, loosely grouped by theme, and ordered alphabetically by author names. I put this together mainly as a way to keep a record of the books that left some mark on me. It is not a complete list, but rather what I could recall and chose to share publicly.
+  </p>
+</header>
 
     {{/* ---- Category order + labels ---- */}}
 {{ $categoryOrder := slice
